# math-results

./: .gitattributes  .gitignore  LEDGER.md  README.md
duval-reiner-r3-r4/: CERTIFICATE.md  PRIOR_ART.md  README.md  REPORT.md  SEARCH.md  pyproject.toml
duval-reiner-r3-r4/artifacts/: census-summary.json
duval-reiner-r3-r4/src/duval_reiner_r3_r4/: __init__.py  census.py  cli.py  families.py  laplacian.py  seeds.py  spectrum.py
duval-reiner-r3-r4/tests/: test_census.py  test_families.py  test_laplacian.py  test_seeds.py  test_spectrum.py
hadwiger-alpha2-order35-omega9/: .gitignore  README.md  pyproject.toml
hadwiger-alpha2-order35-omega9/src/hadwiger_alpha2_order35_omega9/: __init__.py  checks.py  verify.py
hadwiger-alpha2-order35-omega9/tests/: test_certificate.py
hadwiger-k7/: PRIOR_ART.md  RECONNAISSANCE.md  pyproject.toml
hadwiger-k7/src/hadwiger_k7/: obstruction.py  verify.py
hadwiger/alpha2-chi7/: PRIOR_ART.md  pyproject.toml
hadwiger/alpha2-chi7/tests/: test_criterion.py
hadwiger/alpha2-order33/: PROOF.md  pyproject.toml
hadwiger/alpha2-order33/tests/: test_local_checks.py
hadwiger/alpha2-order39-spanning-k20-shells/: .gitignore  ASSERTION.md  README.md  REPORT.md  pyproject.toml
hadwiger/alpha2-order39-spanning-k20-shells/artifacts/: labeled_catchup.txt  shell_checkpoint.txt  successor_checkpoint.txt  successor_wave2.txt  successor_wave3.txt  successor_wave4.txt  successor_wave5.txt  successor_wave6.txt  successor_wave7.txt
hadwiger/alpha2-order39-spanning-k20-shells/tests/: test_shells.py  (+10 more)
hadwiger/alpha2-order39-support-refutation/: .gitignore  PRIOR_ART.md  README.md  REFUTATION.md  REPORT.md  pyproject.toml
laplacian-hook-all/: README.md  pyproject.toml
laplacian-hook-all-hooks-six-refutation/: CERTIFICATE.md  PRIOR_ART.md  README.md  REPORT.md  pyproject.toml
laplacian-hook-all-hooks-six-refutation/artifacts/: refutation-certificate.json
laplacian-hook-all/tests/: test_census.py  test_certificate.py  test_characters.py  test_coefficients.py
laplacian-hook-eleven-deletions/: README.md  pyproject.toml
laplacian-hook-eleven-deletions/tests/: test_census.py  test_character.py  test_cycle_coefficient.py
latin-transversals/: .gitignore  CERTIFICATES.md  G38_NOTE.md  PRIOR_ART.md  README.md  REPORT.md  pyproject.toml
latin-transversals/tests/: test_explicit.py  test_g38_claim.py  test_squares.py
riemann-five-gram-run/: .gitignore  README.md  RESULT.md  pyproject.toml
riemann-five-gram-run/artifacts/: witness.json
riemann-five-gram-run/tests/: test_certificate.py
riemann-nonzero-run-refutation/: .gitignore  AUDIT.md  PRIOR_ART.md  README.md  RESULT.md  pyproject.toml
riemann-nonzero-run-refutation/artifacts/: witness.json
riemann-nonzero-run-refutation/tests/: test_certificate.py
signed-circulant/: PRIOR_ART.md  README.md  RED_TEAM.md  REPORT.md  pyproject.toml
signed-circulant/artifacts/: n20-certificate.json
signed-circulant/cpp/: enumerate.cpp
signed-circulant/n22/: CERTIFICATE.md  REPORT.md
signed-circulant/n24/: CERTIFICATE.md  PRIOR_ART.md  README.md  RED_TEAM.md  REPORT.md  pyproject.toml
signed-circulant/n26/: PRIOR_ART.md  README.md  RED_TEAM.md  REPORT.md  pyproject.toml
signed-circulant/n28/: PRIOR_ART.md  REPORT.md  pyproject.toml
signed-circulant/tests/: test_exact.py  test_model.py
spherical-zero-sum-h3/: .gitignore  CERTIFICATE.md  PRIOR_ART.md  README.md  REPORT.md  SEARCH.md  pyproject.toml
spherical-zero-sum-h3/artifacts/: search-summary.json
spherical-zero-sum-h3/tests/: test_field.py  test_geometry.py  test_h3.py  test_orbits.py
strong-seymour/: .gitignore  README.md  REPORT.md  pyproject.toml
strong-seymour/certificates/: order13.cnf  order13.sha256
strong-seymour/proof/: encoding.md  verification.md
strong-seymour/tests/: test_verifier.py
tau-k-maximal/: .gitignore  PRIOR_ART.md  README.md  REPORT.md  pyproject.toml
tau-k-maximal/tests/: test_checker.py
union-closed-tight/: .gitignore  README.md  pyproject.toml
union-closed-tight/certificates/: order8-members03.drat.xz  order8-members04.drat.xz  order8-members07.drat.xz  order8-members08.drat.xz  order8-members09.drat.xz  order8-members10.drat.xz  order8-members12.drat.xz
union-closed-tight/m02-m15/: REPORT.md
union-closed-tight/m16/: .gitignore
union-closed-tight/m17/: README.md  REPORT.md  pyproject.toml
union-closed-tight/m18/: .gitignore  README.md  REPORT.md  pyproject.toml
union-closed-tight/m19/: README.md  REPORT.md  pyproject.toml
union-closed-tight/m20/: README.md  REPORT.md  pyproject.toml
union-closed-tight/m21/: .gitignore  README.md  REPORT.md  pyproject.toml
union-closed-tight/m22/: .gitignore  PAUSED.md  README.md  REPORT.md  pyproject.toml
union-closed-tight/m23/: PAUSED.md  README.md  REPORT.md  pyproject.toml
union-closed-tight/tests/: test_encoding.py
unique-multiset-sum/: README.md  RED_TEAM.md  REPORT.md  pyproject.toml
unique-multiset-sum-cyclic/: .gitignore  PRIOR_ART.md  PROOF.md  README.md  RED_TEAM.md  pyproject.toml
unique-multiset-sum/finite-abelian/: .gitignore  PRIOR_ART.md
unique-multiset-sum/lean/: CheckAxioms.lean  lakefile.toml
unique-multiset-sum/tests/: test_checker.py
zero-forcing-mycielski/cycles/: THEOREM.md  pyproject.toml
zero-forcing-mycielski/paths/: .gitignore  RED_TEAM.md  pyproject.toml
zero-forcing-petersen-infinite/: .gitignore  README.md  THEOREM.md  pyproject.toml
zero-forcing-petersen-infinite/artifacts/: certificate-summary.json
zero-forcing-petersen-infinite/tests/: test_certificate.py  test_forcing.py  test_kernel.py
zero-forcing-petersen-k4-separator/: .gitignore  THEOREM.md  pyproject.toml
zero-forcing-petersen-k4-separator/artifacts/: certificate-summary.json
zero-forcing-petersen-k4-separator/tests/: test_separator.py
zero-forcing-petersen/all-k-boundary/: REPORT.md  THEOREM.md  pyproject.toml
zero-forcing-petersen/general-transfer/: AUDIT.md  PRIOR_ART.md  README.md  THEOREM.md  pyproject.toml
zero-forcing-petersen/k3-separator/: CERTIFICATE.md  PATHWIDTH.md  REPORT.md  TRANSFER.md  pyproject.toml
(+480 files in other folders)
