[project]
name = "hadwiger-k7"
version = "0.1.0"
description = "Exact verifier for a failed local lemma in the K7-minor-free 7-colour lane"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hadwiger-k7-check = "hadwiger_k7.verify:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
