[project]
name = "laplacian-hook-six-refutation"
version = "0.1.0"
description = "Exact k=1 obstruction to a six-deletion all-hooks extension"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
laplacian-hook-six-refutation-check = "laplacian_hook_six_refutation.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["laplacian_hook_six_refutation"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
