[project]
name = "riemann-nonzero-run-refutation"
version = "0.1.0"
description = "Certificate for a four-crossing sign-pattern counterexample near height 10^25"
requires-python = ">=3.12"

[project.scripts]
riemann-nonzero-run-check = "riemann_nonzero_run_refutation.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["riemann_nonzero_run_refutation"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
