[project]
name = "strong-seymour"
version = "0.1.0"
description = "Exact search for tournaments without a strong Seymour vertex"
requires-python = ">=3.12"
dependencies = ["python-sat>=1.8.dev20"]

[project.scripts]
strong-seymour-search = "strong_seymour.search:main"
strong-seymour-verify = "strong_seymour.verify:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.17",
  "ruff>=0.12",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pysat.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
