[project]
name = "union-closed-tight"
version = "0.1.0"
description = "Certified bounded search for clean tight union-closed families"
requires-python = ">=3.12"
dependencies = ["python-sat==1.9.dev7"]

[project.scripts]
uctight = "union_closed_tight.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["union_closed_tight"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

