[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyclic-ums-gap"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.17",
  "pytest>=8.4",
  "ruff>=0.12",
]

[project.scripts]
cyclic-ums-check = "cyclic_ums.verify:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclic_ums"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
