[project]
name = "signed-circulant-n24"
version = "0.1.0"
description = "Exact n=24 gate for signed C_n(1,2)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
signed-circulant-n24-check = "signed_circulant_n24.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["signed_circulant_n24"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
