[project]
name = "union-closed-tight-m17"
version = "0.1.0"
description = "Order-eight clean tight union-closed gate at exactly 17 members"
requires-python = ">=3.12"
dependencies = ["python-sat==1.9.dev7"]

[project.scripts]
uctight-m17 = "union_closed_tight_m17.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/union_closed_tight_m17"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["union_closed_tight_m17"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
