[project]
name = "zero-forcing-mycielski-paths"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
zero-forcing-mycielski-paths-check = "zero_forcing_mycielski_paths.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zero_forcing_mycielski_paths"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
