[project]
name = "zero-forcing-petersen-separator"
version = "0.1.0"
description = "All-order balanced-separator certificate for P(n,3)"
requires-python = ">=3.12"

[project.scripts]
zero-forcing-petersen-separator-check = "zero_forcing_petersen_separator.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["zero_forcing_petersen_separator"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
